feat: update project image

--- a/index.html
+++ b/index.html
@@ -154,10 +154,10 @@
       <div class="projetos-grid">
 
         <div class="projeto-card">
-          <img src="assets/img/screenshots/playtime-store-js-shopping-cart-02.jpeg" alt="Screenshot da página do projeto PlayTime Store Shopping Cart"/>
+          <div class="projeto-card-img-container"><img src="assets/img/screenshots/playtime-store-js-shopping-cart-02.jpeg" alt="Screenshot da página do projeto PlayTime Store Shopping Cart"/></div>
           <h3>PlayTime Store - Shopping Cart </h3>
           <p>
-            Este é um projeto Front-End que simula a lógica funcional de um Carrinho de Compras para a loja de brinquedos fictícia Playtime Store. O foco principal é a demonstração de manipulação do DOM e a aplicação de lógica de negócios (cálculos e gestão de estado) utilizando JavaScript Puro (Vanilla JS).
+            Projeto Front-End que simula a lógica funcional de um Carrinho de Compras. O foco principal é a demonstração de manipulação do DOM e a aplicação de lógica de negócios (cálculos e gestão de estado) utilizando JavaScript Puro (Vanilla JS).
           </p>
           <div class="btns">
             <a href="https://emillyandradedev.github.io/js-shopping-cart/" target="_blank">Ver projeto</a>
@@ -167,11 +167,11 @@
         </div>
 
         <div class="projeto-card">
-          <img src="assets/img/screenshots/rpg-aventuras-02.jpeg" />
+          <div class="projeto-card-img-container"><img src="assets/img/screenshots/rpg-aventuras-02.jpeg" /></div>
           <h3>RPG - Escolha Sua Aventura </h3>
           <p>
-            Um jogo interativo no estilo “Escolha sua aventura”, onde cada decisão leva a caminhos diferentes,
-            resultando em finais variados. O projeto é modular, permitindo criar e jogar várias histórias no mesmo
+            Um jogo no estilo “Escolha sua aventura”, onde cada decisão leva a caminhos diferentes,
+            resultando em finais variados. O projeto é modular, permitindo criar várias histórias no mesmo
             sistema, apenas alterando os dados da aventura.
           </p>
           <div class="btns">
@@ -182,11 +182,10 @@
         </div>
 
         <div class="projeto-card">
-          <img src="assets/img/screenshots/cardapio-poema-cafe-03.jpeg" alt="Screenshot da página do projeto Cardápio Poema Café"/>
+          <div class="projeto-card-img-container"><img src="assets/img/screenshots/cardapio-poema-cafe-03.jpeg" alt="Screenshot da página do projeto Cardápio Poema Café"/></div>
           <h3>Criação de Cardápio para Cafeteria - Poema Café</h3>
           <p>
-            Cardápio digital totalmente responsivo, construído com HTML5 e CSS3 para prática de layout, grid e design de
-            interfaces.
+            Cardápio digital totalmente responsivo, construído com HTML5 e CSS3 para demonstrar domínio de técnicas de layout (Flexbox e Grid), garantindo uma interface otimizada para diversas telas.
           </p>
           <div class="btns">
             <a href="https://emillyandradedev.github.io/projeto-cardapio-cafe/" target="_blank">Ver projeto</a>
@@ -195,7 +194,7 @@
         </div>
 
         <div class="projeto-card">
-          <img src="assets/img/screenshots/quizz-cacadores-de-erros-04.jpeg" alt="Screenshot da página do projeto Quizz de Gramática"/>
+          <div class="projeto-card-img-container"><img src="assets/img/screenshots/quizz-cacadores-de-erros-05.jpeg" alt="Screenshot da página do projeto Quizz de Gramática"/></div>
           <h3>Quizz Interativo: Caçadores de Erros - Gramática</h3>
           <p>
             Este projeto foi desenvolvido para exercitar a lógica de programação e a interatividade com o usuário,
@@ -212,11 +211,10 @@
         </div>
 
         <div class="projeto-card">
-          <img src="assets/img/screenshots/nodejs-utilities-kit-qrcode-password-01.jpeg" alt="Screenshot da página do projeto Node.js Utilities Kit"/>
+          <div class="projeto-card-img-container"><img src="assets/img/screenshots/nodejs-utilities-kit-qrcode-password-02.jpeg" alt="Screenshot da página do projeto Node.js Utilities Kit"/></div>
           <h3>Node.js Utilities Kit (QRCode & Password)</h3>
           <p>
-            Kit de utilidades desenvolvido com Node.js, contendo geração de QR Codes e senhas seguras, focado em prática
-            de lógica, módulos e manipulação de dados no backend.
+            Kit de ferramentas back-end desenvolvido com Node.js, incluindo utilidades como geração de QR Codes e senhas seguras. O projeto foca na prática de lógica modular, manipulação de dados e integração de pacotes NPM, reforçando habilidades de desenvolvimento server-side.
           </p>
           <div class="btns">
             <a href="https://github.com/EmillyAndradeDev/nodejs-qrcode-password-generator" target="_blank">Ver
