feat: add new project to portfolio

--- a/index.html
+++ b/index.html
@@ -17,13 +17,11 @@
 </head>
 
 <body>
-  <!-- CABEÇALHO / NAVEGAÇÃO -->
   <header>
     <div class="container nav-wrapper">
       <img class="logo-pequeno" src="assets/img/logo-EmillyAndradeDev.png" alt="Logo de Emilly Andrade">
       <h1 class="logo">EmillyAndrade<span class="realce">DEV</span></h1>
 
-      <!-- Menu mobile com checkbox -->
       <input type="checkbox" id="menu-toggle" />
       <label for="menu-toggle" class="menu-icon">&#9776;</label>
 
@@ -37,7 +35,6 @@
     </div>
   </header>
 
-  <!-- HERO - Sessão de boas-vindas com animação de texto -->
   <section class="hero">
     <div class="container hero-grid">
       <div class="hero-img">
@@ -53,7 +50,6 @@
     </div>
   </section>
 
-  <!-- SOBRE MIM -->
   <section id="sobre" class="section">
     <div class="container about-text">
       <h2 class="section-title">Sobre mim</h2>
@@ -87,7 +83,6 @@
     <div class="container">
       <h2>Skills</h2>
       <div class="skills-grid">
-        <!-- Cada "skill-card" representa uma habilidade com ícone -->
         <div class="skill-card">
           <i class="devicon-html5-plain colored"></i>
           <span>HTML5</span>
@@ -194,6 +189,30 @@
         </div>
 
         <div class="projeto-card">
+          <div class="projeto-card-img-container"><img src="assets/img/screenshots/todolist02.jpeg" alt="Screenshot da página do To-Do App"/></div>
+          <h3>To-Do App (Vanilla JS)</h3>
+          <p>
+            Aplicação interativa de gerenciamento de tarefas desenvolvida com HTML, CSS e JavaScript Puro. O sistema permite ao usuário adicionar, editar, excluir e marcar itens como concluídos, utilizando o localStorage para garantir a persistência dos dados no navegador.
+          </p>
+          <div class="btns">
+            <a href="https://emillyandradedev.github.io/todo-app-vanilla-js/" target="_blank">Ver projeto</a>
+            <a href="https://github.com/EmillyAndradeDev/todo-app-vanilla-js" target="_blank">Ver código</a>
+          </div>
+        </div>
+
+        <div class="projeto-card">
+          <div class="projeto-card-img-container"><img src="assets/img/screenshots/nodejs-utilities-kit-qrcode-password-02.jpeg" alt="Screenshot da página do projeto Node.js Utilities Kit"/></div>
+          <h3>Node.js Utilities Kit (QRCode & Password)</h3>
+          <p>
+            Kit de ferramentas back-end desenvolvido com Node.js, incluindo utilidades como geração de QR Codes e senhas seguras. O projeto foca na prática de lógica modular, manipulação de dados e integração de pacotes NPM, reforçando habilidades de desenvolvimento server-side.
+          </p>
+          <div class="btns">
+            <a href="https://github.com/EmillyAndradeDev/nodejs-qrcode-password-generator" target="_blank">Ver
+              código</a>
+          </div>
+        </div>
+
+        <div class="projeto-card">
           <div class="projeto-card-img-container"><img src="assets/img/screenshots/quizz-cacadores-de-erros-05.jpeg" alt="Screenshot da página do projeto Quizz de Gramática"/></div>
           <h3>Quizz Interativo: Caçadores de Erros - Gramática</h3>
           <p>
@@ -207,18 +226,6 @@
               projeto</a>
             <a href="https://github.com/EmillyAndradeDev/quizz-cacadores-de-erros-gramatica-e-ortografia"
               target="_blank">Ver código</a>
-          </div>
-        </div>
-
-        <div class="projeto-card">
-          <div class="projeto-card-img-container"><img src="assets/img/screenshots/nodejs-utilities-kit-qrcode-password-02.jpeg" alt="Screenshot da página do projeto Node.js Utilities Kit"/></div>
-          <h3>Node.js Utilities Kit (QRCode & Password)</h3>
-          <p>
-            Kit de ferramentas back-end desenvolvido com Node.js, incluindo utilidades como geração de QR Codes e senhas seguras. O projeto foca na prática de lógica modular, manipulação de dados e integração de pacotes NPM, reforçando habilidades de desenvolvimento server-side.
-          </p>
-          <div class="btns">
-            <a href="https://github.com/EmillyAndradeDev/nodejs-qrcode-password-generator" target="_blank">Ver
-              código</a>
           </div>
         </div>
 
