feat: add project to portfolio

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         </div>
 
         <div class="projeto-card">
-          <div class="projeto-card-img-container"><img src="assets/img/screenshots/rpg-aventuras-02.jpeg" /></div>
+          <div class="projeto-card-img-container"><img src="assets/img/screenshots/rpg-aventuras-06.png" /></div>
           <h3>RPG - Escolha Sua Aventura </h3>
           <p>
             Um jogo no estilo “Escolha sua aventura”, onde cada decisão leva a caminhos diferentes,
