docs: improve About Me content

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         (Flexbox, Grid, responsividade e animações), JavaScript e TypeScript para criação de interfaces dinâmicas,
         manipulação do DOM e aplicação de lógica de programação avançada. No <strong>back-end</strong>, trabalho com
         Node.js, REST APIs, modularização de projetos com CommonJS e ESM, manipulação de JSON, integração de sistemas e
-        automação de tarefas utilizando npm. Também aplico boas práticas de debugging, testes e manutenção de
+        automação de tarefas utilizando npm. Também aplico boas práticas de debugging, testes e manutenção de códigos.
       </p>
       <p class="section-text">
         Tenho experiência com controle de versão usando Git e GitHub, colaboração em projetos open source, e
