feat: Add new portfolio project 'Progressive Discount Calculator'

--- a/index.html
+++ b/index.html
@@ -177,6 +177,19 @@
         </div>
 
         <div class="projeto-card">
+          <div class="projeto-card-img-container"><img src="assets/img/screenshots/screenshot-tabernageek.png" /></div>
+          <h3>Dynamic Pricing Calculator</h3>
+          <p>
+            Implementação de lógica de desconto progressivo (0% a 20%) aplicada a um carrinho de compras. Desenvolvido em Vanilla JavaScript para demonstrar a tradução de regras de negócio complexas em um ambiente puramente Front-End.
+          </p>
+          <div class="btns">
+            <a href="https://emillyandradedev.github.io/dynamic-pricing-calculator-js/" target="_blank">Ver projeto</a>
+            <a href="https://github.com/EmillyAndradeDev/dynamic-pricing-calculator-js" target="_blank">Ver
+              código</a>
+          </div>
+        </div>
+
+        <div class="projeto-card">
           <div class="projeto-card-img-container"><img src="assets/img/screenshots/cardapio-poema-cafe-03.jpeg" alt="Screenshot da página do projeto Cardápio Poema Café"/></div>
           <h3>Criação de Cardápio para Cafeteria - Poema Café</h3>
           <p>
